kaarten verschijnen e.d., maar doen niks. Als eerste kijken naar een overlay laten verschijnen om een speler te selecteren van wie we een kaart willen zien. Sommige kaarten uitgezet zodat SeeOne kaarten eerder verschijnen bij het testen.

--- a/public/index.html
+++ b/public/index.html
@@ -121,7 +121,7 @@
                     <div class="container">
                         <div id="content" >
                             <div id="text">
-                                Take a card from a player.
+                                See a card from a player.
                             </div>
                             <div class="form-group">
                                 <label for="player-select">Select player:</label>
