fixed popup name

--- a/public/index.html
+++ b/public/index.html
@@ -117,7 +117,7 @@
                         <button id="cancelPopupButton" class="btn btn-danger" type="button" onclick="GameRoom.hideOverlay();">Cancel</button>
                     </div>
                 </div>
-                <div id="seeOnePopup" class="popup center text-center">
+                <div id="seeOneSelectPopup" class="popup center text-center">
                     <div class="container">
                         <div id="content" >
                             <div id="text">
