see one card zonder debug

--- a/public/index.html
+++ b/public/index.html
@@ -135,7 +135,7 @@
                         </div>
                     </div>
                     <div class="buttonGroup">
-                        <button id="seeOneButton" class="btn btn-success" type="button">Take</button>
+                        <button id="seeOneButton" class="btn btn-success" type="button">See</button>
                         <button id="cancelPopupButton" class="btn btn-danger" type="button" onclick="GameRoom.hideOverlay();">Cancel</button>
                     </div>
                 </div>
