--- a/public/index.html
+++ b/public/index.html
@@ -33,7 +33,7 @@
             <div class="center text-center" id="loginInput">
                 <div class="center">
                     <div id="title">EXPLODING KETCHUP</div>
-                    <div id="title">EXPLODING KETCHUP: Multi-Agent Systems project by Joost Doornkamp, Henry Maathuis and Ruben van Dijk</div>
+                    <div id="body">Multi-Agent Systems project by Joost Doornkamp, Henry Maathuis and Ruben van Dijk</div>
                     <label for="inputdefault">Name</label>
                     <input class="form-control" id="nameInput" type="text" placeholder="Type a name">
                     <button id="loginButton" class="btn btn-success" type="button">Join</button>
